Modify list of folders

--- a/QtClient/JoplinQtClient/qml.qrc
+++ b/QtClient/JoplinQtClient/qml.qrc
@@ -4,5 +4,9 @@
         <file>FolderList.qml</file>
         <file>NoteList.qml</file>
         <file>NoteEditor.qml</file>
+        <file>AddButton.qml</file>
+        <file>Test.qml</file>
+        <file>TestForm.ui.qml</file>
+        <file>EditableListItem.qml</file>
     </qresource>
 </RCC>
