Making folder list more generic to reuse it for notelist

--- a/QtClient/JoplinQtClient/qml.qrc
+++ b/QtClient/JoplinQtClient/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>app.qml</file>
-        <file>FolderList.qml</file>
+        <file>ItemList.qml</file>
         <file>NoteList.qml</file>
         <file>NoteEditor.qml</file>
         <file>AddButton.qml</file>
